--- a/app/src/main/res/layout/content_fleet_management.xml
+++ b/app/src/main/res/layout/content_fleet_management.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".activities.MainActivity"
+    tools:showIn="@layout/activity_fleet_management">
 
     <TextView
         android:id="@+id/textView"
@@ -35,183 +35,197 @@
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <LinearLayout
+            android:id="@+id/segmentContainerB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/segmentTitleB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SEGMENT B"
                 android:textSize="25sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_marginBottom="10dp">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_marginBottom="10dp"-->
+                <!--android:orientation="horizontal">-->
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
-                    app:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="@color/fleetGreen">
+                <!--<androidx.cardview.widget.CardView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_marginRight="5dp"-->
+                    <!--android:layout_weight="1"-->
+                    <!--app:cardBackgroundColor="@color/fleetGreen"-->
+                    <!--app:cardCornerRadius="5dp">-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        >
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:orientation="vertical">-->
 
-                        <TextView
-                            android:id="@+id/textView3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Suzuki Swift"
-                            android:paddingTop="10dp"
-                            android:gravity="center"
-                            android:textSize="15sp"
-                            android:textColor="#000"/>
+                        <!--<TextView-->
+                            <!--android:id="@+id/textView3"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:gravity="center"-->
+                            <!--android:paddingTop="10dp"-->
+                            <!--android:text="Suzuki Swift"-->
+                            <!--android:textColor="#000"-->
+                            <!--android:textSize="15sp" />-->
 
-                        <TextView
-                            android:id="@+id/textView4"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="LU675JF"
-                            android:gravity="center"
-                            android:textSize="25sp"
-                            android:textColor="#000"/>
+                        <!--<TextView-->
+                            <!--android:id="@+id/textView4"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:gravity="center"-->
+                            <!--android:text="LU675JF"-->
+                            <!--android:textColor="#000"-->
+                            <!--android:textSize="25sp" />-->
 
-                    </LinearLayout>
+                    <!--</LinearLayout>-->
 
-                </androidx.cardview.widget.CardView>
+                <!--</androidx.cardview.widget.CardView>-->
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="@color/fleetGray">
+                <!--<androidx.cardview.widget.CardView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_weight="1"-->
+                    <!--app:cardBackgroundColor="@color/fleetGray"-->
+                    <!--app:cardCornerRadius="5dp">-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:orientation="vertical">-->
 
-                        <TextView
-                            android:id="@+id/textView5"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="Suzuki Swift"
-                            android:textSize="15sp"
-                            android:textColor="#000"/>
+                        <!--<TextView-->
+                            <!--android:id="@+id/textView5"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:gravity="center"-->
+                            <!--android:padding="5dp"-->
+                            <!--android:text="Suzuki Swift"-->
+                            <!--android:textColor="#000"-->
+                            <!--android:textSize="15sp" />-->
 
-                        <TextView
-                            android:id="@+id/textView6"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="LU665JF"
-                            android:textSize="25sp"
-                            android:textColor="#000" />
+                        <!--<TextView-->
+                            <!--android:id="@+id/textView6"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:gravity="center"-->
+                            <!--android:padding="5dp"-->
+                            <!--android:text="LU665JF"-->
+                            <!--android:textColor="#000"-->
+                            <!--android:textSize="25sp" />-->
 
-                    </LinearLayout>
+                    <!--</LinearLayout>-->
 
-                </androidx.cardview.widget.CardView>
+                <!--</androidx.cardview.widget.CardView>-->
 
-            </LinearLayout>
+            <!--</LinearLayout>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:weightSum="1">-->
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
-                    app:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="@color/fleetGreen">
+                <!--<androidx.cardview.widget.CardView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_marginRight="5dp"-->
+                    <!--android:layout_weight="0.5"-->
+                    <!--app:cardBackgroundColor="@color/fleetGreen"-->
+                    <!--app:cardCornerRadius="5dp">-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        >
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:orientation="vertical">-->
 
-                        <TextView
-                            android:id="@+id/textView3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Suzuki Swift"
-                            android:paddingTop="10dp"
-                            android:gravity="center"
-                            android:textSize="15sp"
-                            android:textColor="#000"/>
+                        <!--<TextView-->
+                            <!--android:id="@+id/textView31"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:gravity="center"-->
+                            <!--android:paddingTop="10dp"-->
+                            <!--android:text="Suzuki Swift"-->
+                            <!--android:textColor="#000"-->
+                            <!--android:textSize="15sp" />-->
 
-                        <TextView
-                            android:id="@+id/textView4"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="LU675JF"
-                            android:gravity="center"
-                            android:textSize="25sp"
-                            android:textColor="#000"/>
+                        <!--<TextView-->
+                            <!--android:id="@+id/textView24"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:gravity="center"-->
+                            <!--android:text="LU675JF"-->
+                            <!--android:textColor="#000"-->
+                            <!--android:textSize="25sp" />-->
 
-                    </LinearLayout>
+                    <!--</LinearLayout>-->
 
-                </androidx.cardview.widget.CardView>
+                <!--</androidx.cardview.widget.CardView>-->
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="@color/fleetGray">
+                <!--<androidx.cardview.widget.CardView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="0.5"-->
+                <!--app:cardBackgroundColor="@color/fleetGray"-->
+                <!--app:cardCornerRadius="5dp">-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
+                <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:orientation="vertical">-->
 
-                        <TextView
-                            android:id="@+id/textView15"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="Suzuki Swift"
-                            android:textSize="15sp"
-                            android:textColor="#000"/>
+                    <!--<TextView-->
+                        <!--android:id="@+id/textView15"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:gravity="center"-->
+                        <!--android:padding="5dp"-->
+                        <!--android:text="Suzuki Swift"-->
+                        <!--android:textColor="#000"-->
+                        <!--android:textSize="15sp" />-->
 
-                        <TextView
-                            android:id="@+id/textView16"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="LU665JF"
-                            android:textSize="25sp"
-                            android:textColor="#000" />
+                    <!--<TextView-->
+                        <!--android:id="@+id/textView16"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:gravity="center"-->
+                        <!--android:padding="5dp"-->
+                        <!--android:text="LU665JF"-->
+                        <!--android:textColor="#000"-->
+                        <!--android:textSize="25sp" />-->
 
-                    </LinearLayout>
+                <!--</LinearLayout>-->
 
-                </androidx.cardview.widget.CardView>
+                <!--</androidx.cardview.widget.CardView>-->
 
-            </LinearLayout>
+            <!--</LinearLayout>-->
 
         </LinearLayout>
+
+        <!--<LinearLayout-->
+            <!--android:id="@+id/segmentContainerC"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_marginTop="5dp">-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/segmentTitleC"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="SEGMENT C"-->
+                <!--android:textSize="25sp" />-->
+        <!--</LinearLayout>-->
 
     </LinearLayout>
 
